--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,13 +6,13 @@
     {{ usuario }}
     </p>
     
-    <button class="btn" (click)="salir()">salir</button>
-    <button routerLink="/show/{{usuario}}" class="btn btn-outline-secondary">ver Perfil</button>
+   
+  
 
     
     
 </div>
-
+<app-footer-sistem></app-footer-sistem>
 
 
 
