--- a/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.html
+++ b/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.html
@@ -9,6 +9,10 @@
 
 
     <h2>Todos tus canciones </h2>
+  
+    <p>
+      En esta sección se edita el álbum creado por el artista en los campos permitidos,que son nombre del Álbum,autor y año del mismo los cuales son llenados por el artista.
+  </p>
 
     <table class="table">
       <thead>
@@ -32,18 +36,8 @@
         </tr>
       </tbody>
     </table>
-
-
-
-
-
-
-
-
-
-
-
-   
+  
 </div>
 </div>
 </div>
+<app-footer-sistem></app-footer-sistem>
