--- a/src/app/shared/footer-sistem/footer-sistem.component.html
+++ b/src/app/shared/footer-sistem/footer-sistem.component.html
@@ -1,1 +1,4 @@
-<p>footer-sistem works!</p>
+<div class="copyright py-4 text-center text-white bg-dark">
+ 
+      <div class="container"><small>Copyright &copy; Taki-Tri 2022</small></div>
+  </div>
