--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -19,8 +19,9 @@
     border-radius:150px;
     }
     .nav-link{
-      color: aliceblue;
-    }
+     
+      color: aliceblue; 
+      font-family: var(--bs-body-font-family); }
     
 
 
