--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -78,9 +78,13 @@ color: white;
 }
 .btn{
     margin-top: 30px;
-    border-radius: 30px;
+   
     background: #2D31FA;
     color:white;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
 
 }
 .imagen{
