--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -81,10 +81,14 @@ color: white;
     margin-left: 10%;
 }
 .btn{
-    margin-top: 30px;
-    border-radius: 30px;
+   
+   
     background: #2D31FA;
     color:white;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
 }
 .imagen{
     margin-top: 50px;
