--- a/src/app/components/administrador/administrador.component.css
+++ b/src/app/components/administrador/administrador.component.css
@@ -25,10 +25,11 @@
     border-width: 3px;
     border-left-width: 10px;
     border-right-width: 10px;
-    border-top-color:yellow;
-    border-right-color:blue;
-    border-left-color:blue;
-    border-bottom-color:red;
+    border-right-width: 10px;
+    border-top-color:black;
+    border-right-color:black;
+    border-left-color:black;
+    border-bottom-color:black;
     padding: 5px;
     margin-bottom: 20px;
 }
