--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,15 +1,25 @@
 .btn{
-    margin-top: 30px;
-    border-radius: 30px;
-    background: #2D31FA;
-    color:white;
+  margin-top: 90%;
+  margin-left: 3%;
+  margin-top: 30px;
+  margin-right: 1%;
+  
+   
+  
     height: 50px;
    
+
+    background: #2D31FA;
+    color:white;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
   
    
 }
 .id_usuario_perfil{
-  margin-left: 450px;
+  margin-left: 20%;
 }
 
 .d-flex {
@@ -19,5 +29,5 @@
 }
 .dasboard_completo{
   display: flex;
-  height: 900px;
+  height: 600px;
 }
