--- a/src/app/components/perfil/show/show.component.css
+++ b/src/app/components/perfil/show/show.component.css
@@ -1,5 +1,6 @@
 .perfil_completo{
     display: flex;
+    height: 600px;
 }
 .mb-12{
     width: 350px;
@@ -20,4 +21,28 @@
 }
 .form-label{
     margin-top: 20px;
+}
+.parrafo_informativo p{
+    color:black;
+    border-style: solid;
+    border-width: 3px;
+    border-left-width: 10px;
+    border-right-width: 10px;
+    border-top-color:black;
+    border-right-color:black;
+    border-left-color:black;
+    border-bottom-color:black;
+    padding: 5px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 5%;
+}
+.upload{
+    margin-right: 50%;
+}
+.parrafo_informativo h2{
+    text-align: center;
+    font-size: 180% ;
 }
