--- a/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.html
+++ b/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.html
@@ -2,7 +2,11 @@
 
 <div class="contenedos_edit_generos">
   <app-sidenav-user></app-sidenav-user>
- 
+  <div class="parrafo_informativo">
+    <h2> Editar Álbumes </h2>
+    <p>
+      En esta sección se edita el álbum creado por el artista en los campos permitidos,que son nombre del Álbum,autor y año del mismo los cuales son llenados por el artista.
+  </p>
 <form class="formulario_albumes_completo" (ngSubmit)="onSubmit()" [formGroup]="albumForm">
  
   <div class="imagenes_albumes">
@@ -16,14 +20,17 @@
 />
 </div>
  <div class="formulario_albumes">
-  <h3>Editar Álbumes</h3>
+
   <div class="input-group mb-5">
+    <label for="text" class="input_label_edit">Álbum</label>
     <input type="text" class="form-control" placeholder="Album" required formControlName="name">    
   </div>
   <div class="input-group mb-5">
+    <label for="text" class="input_label_edit">Autor</label>
     <input type="text" class="form-control" placeholder="Autor" required formControlName="author">
   </div>
   <div class="input-group mb-5">
+    <label for="text" class="input_label_edit">Año</label>
     <input type="text" class="form-control" placeholder="Año" required formControlName="year">
   </div>
 <div class="form-group">
@@ -35,13 +42,16 @@
 </div>
 
 
-<div class="modal-footer">
-  <button  class="btn btn-secondary" [disabled]="!albumForm.valid"   type="submit">EDITAR</button>
+
+  <button  class="btn btn-primary" [disabled]="!albumForm.valid"   type="submit">EDITAR</button>
  
+
 </div>
-</div>
+
 </form>
 
 
 
 </div>
+</div>
+<app-footer-sistem></app-footer-sistem>
