--- a/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.css
+++ b/src/app/components/usuarios/canciones/show-canciones/show-canciones.component.css
@@ -1,3 +1,24 @@
 .Contenedos_todos_los_canciones{
     display: flex;
 }
+.container p{
+    color:black;
+    border-style: solid;
+    border-width: 3px;
+    border-left-width: 10px;
+    border-right-width: 10px;
+    border-top-color:black;
+    border-right-color:black;
+    border-left-color:black;
+    border-bottom-color:black;
+    padding: 5px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 5%;
+}
+.container h2{
+    text-align: center;
+    font-size: 180% ;
+}
