--- a/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.css
+++ b/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.css
@@ -1,13 +1,53 @@
 .perfil_completo{
     display: flex;
+    width: auto;
+   
 }
 .mb-12{
     width: 350px;
 }
 .formulario_show_perfil{
- text-align: center;
- margin-left: 300px;
+ 
 
+ width: 80%;
+ 
+ margin-left: 15%;
+ display: flex;
+ margin-top: 7%;
+}
+.imagen_avatar{
+    margin-top: 2%;
+    width: 40%;
+    margin-left: 0.5% !important;
+  
+}
+
+.form_perfil{
+    width: 60%;
+   
+}
+
+.texto{
+    padding-left: 5%;
+    padding-right: 4%;
+    
+}
+.texto h2{
+    text-align: center;
+    font-size: 180% ;
+}
+.texto p{
+    color:black;
+    border-style: solid;
+    border-width: 3px;
+    border-left-width: 10px;
+    border-right-width: 10px;
+    border-top-color:black;
+    border-right-color:black;
+    border-left-color:black;
+    border-bottom-color:black;
+    padding: 5px;
+    margin-bottom: 20px;
 }
 .btn{
     margin-top: 20px;
@@ -17,4 +57,29 @@
     text-align: center;
     align-items: center;
     margin-bottom: 10px;
+}
+.avatar_perfil{
+    width:150px;
+    height:150px;
+    border-radius:150px;
+    border:5px solid #666;
+}
+.form-control{
+    text-align: center;
+}
+.form-label{
+    margin-top: 0.5%;
+}
+@media only screen and (max-width: 1200px) {
+
+    .formulario_show_perfil{
+     
+        width: auto;
+        display: inline;
+     
+        margin-left: 10%;
+       
+        margin-top: 7%;
+     
+    }  
 }
