--- a/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.html
+++ b/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.html
@@ -6,16 +6,23 @@
     <app-sidenav-user></app-sidenav-user>
    
        
-    
+ <div class="texto">
+    <h2> Perfil Artista</h2>
+    <p>
+        En esta seccion se puede visualizar el perfil del usuario artista,el cual cuenta con  información  exclusiva del autor, el cual tiene  un avatar y sus datos personales.
+   </p>
 <form [formGroup]="ediForm"  novalidate class="formulario_show_perfil">
-    <h2> Perfil </h2>
+   
+    
     <hr>
 
  
    
+    <div class="imagen_avatar">
     
-   <img [src]="this.url" alt="">
-    
+   <img [src]="this.url" class="avatar_perfil">
+    </div>
+    <div class="form_perfil">
     <div class="mb-12">
         <label class="form-label">Nombre</label>
         <input formControlName="name" type="text" class="form-control"  required [readonly]="true" >      
@@ -25,16 +32,23 @@
         <input formControlName="apellido" type="text" class="form-control" required [readonly]="true" >      
     </div>
     <div class="mb-12">
-        <label class="form-label">Nickname</label>
+        <label class="form-label">Alias</label>
         <input formControlName="nickname" type="text" class="form-control" required [readonly]="true"  >       
     </div>
+    <div class="mb-12">
+        <label class="form-label">Fecha Nacimiento</label>
+        <input formControlName="fecha_nacimiento" type="text" class="form-control" required [readonly]="true"  >       
+    </div>
     
-    <button routerLink="/edit-artist/{{usuario}}" class="btn btn-outline-secondary">Editar</button>
+    <button routerLink="/edit-artist/{{usuario}}" class="btn btn-primary">Editar</button>
+</div>
+
 
 </form>
-
+</div>
 <hr>
 </div>
+<app-footer-sistem></app-footer-sistem>
 
 
 
