--- a/src/app/components/usuarios/sidenav-user/sidenav-user.component.css
+++ b/src/app/components/usuarios/sidenav-user/sidenav-user.component.css
@@ -11,6 +11,7 @@
     height: 100%;
     width: 300px;
     display: flex;
+    
 }
 .navbar-brand{
     display:contents;
@@ -23,3 +24,13 @@
     .nav-link{
       color: aliceblue;
     }
+
+    @media only screen and (min-width: 1500px) {
+
+      .d-flex{
+        height: 1500px;
+         background-color: blueviolet;
+         color: red; 
+       
+      }  
+  }
