--- a/src/app/components/usuarios/solicitud/solicitud.component.css
+++ b/src/app/components/usuarios/solicitud/solicitud.component.css
@@ -9,7 +9,46 @@
 
     width: 100%;
     height: auto;
+    
+   
 }
+.formulario_solicitud h2{
+    text-align: center;
+    font-size: 180% ;   
+}
+.form_solicitud_completo{
+    display: flex;
+    width: 80%;
+ 
+    margin-left: 10%;
+   
+    margin-top: 7%;
+ 
+}
+.imagen_avatar{
+    margin-top: 3.5%;
+    width: 40%;
+    margin-left: 0.5% !important;
+}
+.avatar_perfil{
+    width:150px;
+    height:150px;
+    border-radius:150px;
+    border:5px solid #666;
+}
+.form_soli{
+    width: 60%;
+ 
+    
+}
+.imagen_avatar h4{
+    padding-top: 2%;
+
+padding-left: 8%;
+text-align: left;
+
+}
+
 .mb-3{
 width: 350px;
 
@@ -43,13 +82,19 @@ width: 350px;
     width: 250px;
 }
 .btn1{
-    border-radius: 30px;
+  
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
+
 .btn{   
-    border-radius: 30px;
+  
     display:inline-flex;
     align-items: center;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+    margin-left: 0.3%; 
 }
 .formulario_solicitud p{
     color:black;
@@ -57,12 +102,25 @@ width: 350px;
     border-width: 3px;
     border-left-width: 10px;
     border-right-width: 10px;
-    border-top-color:yellow;
-    border-right-color:blue;
-    border-left-color:blue;
-    border-bottom-color:red;
+    border-top-color:black;
+    border-right-color:black;
+    border-left-color:black;
+    border-bottom-color:black;
     padding: 5px;
     margin-bottom: 20px;
     margin-right: 20px;
     margin-top: 20px;
+}
+@media only screen and (max-width: 1200px) {
+
+    .form_solicitud_completo{
+     
+        width: auto;
+        display: inline;
+     
+        margin-left: 10%;
+       
+        margin-top: 7%;
+     
+    }  
 }
