--- a/src/app/components/usuarios/solicitud/solicitud.component.html
+++ b/src/app/components/usuarios/solicitud/solicitud.component.html
@@ -2,24 +2,30 @@
 <div class="formulario">
     <app-sidenav-user></app-sidenav-user>
 <div class="formulario_solicitud">
-  <p>En esta sección se visualiza, todas las solicitudes enviadas por los artista para ser parte de Taki-Tri,las mismas que son analizadas 
-    por el administrador, quien evalua los datos enviados y procede aceptar o rechazar las solicitudes respectivas.
-   Para que una solicitud sea rechazada ,los datos enviados no son correctos, o el documento PDF, no cuenta con los datos solicitados,
-    o se encuentra con datos no correctos del Artista.
+  <h2>Enviar Solicitud</h2>
+  <p>En esta sección los artistas pueden enviar una solicitud, para poder tener acceso a los modulos de generos,albumes y canciones, ademas de poder ver las respuestas por parte del administrador si la solicitud fue rechazada.
+    Además puede descargar el documento para la solicitud solicitada en TAKI-TRI
   </p>
 
  
-<h2>Enviar Solicitud</h2>
 
 
-<form [formGroup]="solicitudlForm" (ngSubmit)="onSubmit()" novalidate>
+
+<form [formGroup]="solicitudlForm" (ngSubmit)="onSubmit()" novalidate class="form_solicitud_completo">
+  <div class="imagen_avatar">
+    
+   
+    <img src="https://www.science.co.il/internet/browsers/PDF-doc-256.png" alt="" class="avatar_perfil">
+    <h4> <u>Descargar aquí </u></h4>
+     </div>
+  <div class="form_soli">
     <div class="mb-3">
         <label class="form-label">Nombre Artistico</label>
-        <input formControlName="nombre_artistico" type="text" class="form-control" required>
+        <input formControlName="nombre_artistico" type="text" class="form-control" required placeholder="Nombre Artistico">
     </div>
     <div class="mb-3">    
-        <label class="form-label">Numero de Cédula</label>
-        <input maxlength="10" minlength="10" formControlName="nacionalidad" type="text" class="form-control" required>
+        <label class="form-label">Número de Cédula</label>
+        <input maxlength="10" minlength="10" formControlName="nacionalidad" type="text" class="form-control" required placeholder="Cédula">
     </div>
     <div class="form-group">
         
@@ -38,7 +44,7 @@
        
     <button [disabled]="!solicitudlForm.valid" type="submit" class="btn btn-primary">Save</button>
         
-    
+  </div>  
 </form>
 <hr>
 <div class=" contenedor_mensaje_solicitud"  >
@@ -63,9 +69,9 @@
           
            
       
-               <button type="button" class="btn1 btn-outline-danger" (click)="eliminar(administrador)">Eliminar</button>
+               <button type="button" class="btn1 btn-danger" (click)="eliminar(administrador)">Eliminar</button>
            
-            
+              
           </tr>
        
         </tbody>
@@ -82,5 +88,5 @@
 </div>
 
 </div>
-
+<app-footer-sistem></app-footer-sistem>
 
