--- a/src/app/shared/header-admin/header-admin.component.css
+++ b/src/app/shared/header-admin/header-admin.component.css
@@ -1,11 +1,24 @@
 .navbar-brand{
-    display:contents;
+  display:contents;
+
+}
+.navbar-brand img{
+  width:90px;
+  height:60px;
   
+}
+
+
+.home{
+    text-decoration: none;
+    color: aliceblue;
   }
-  .home{
-      text-decoration: none;
-      color: aliceblue;
-    }
-    .nav-link{
-      color: aliceblue;
-    }
+  .home img{
+    width:60px;
+  height:60px;
+  border-radius:150px;
+  }
+  .nav-link{
+    color: aliceblue;
+  }
+  
